--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,8 +12,11 @@
   <body>
 
     <div class="page-header">
-        <h1><a href="">Noms &amp;&amp; Cats</a></h1>
-        <p>Time for noms and cats!</p>
+      {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+      {% endif %}
+      <h1><a href="">Noms &amp;&amp; Cats</a></h1>
+      <p>Time for noms and cats!</p>
     </div>
 
     <div class="content container">
