--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,9 @@
   <body>
 
     <div class="page-header">
+      <div class="col-md-2">
+        <img class="header-image" src="../../static/alan.JPG" alt="" />
+      </div>
       {% if user.is_authenticated %}
           <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
       {% endif %}
