Resized header image.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
 
     <div class="page-header">
       <div class="col-md-2">
-        <img class="header-image" src="../../static/alan.JPG" alt="" />
+        <img class="header-image" src="../../static/alan-1.JPG" alt="" />
       </div>
       {% if user.is_authenticated %}
           <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
